# robotics_manipulation_russ

./: README.md  pyproject.toml
01/: 02_drake_systems_fundamentals.ipynb  03_physics_simulation_and_robots.ipynb  Init.ipynb
01-Introduction/: 02_drake_systems_fundamentals.ipynb  03_physics_simulation_and_robots.ipynb  04_hardwarestation_and_scenarios.ipynb  intro.ipynb  results.json
01-Introduction/assets/: scenario.yaml  table.sdf
01-Introduction/assets/B_model/: B.sdf
01-Introduction/assets/G_model/: G.sdf
01/assets/P_model/: P.sdf
02/: 01_reflected_inertia.ipynb  02_hardware_station_io.ipynb  03_direct_joint_control.ipynb  04_pid_controller.ipynb  bimanual.ipynb  gymnasium_robotics.ipynb  iiwa_with_allegro.ipynb  inspector.ipynb  menagerie.ipynb  results.json  rubiks_cube.ipynb  simulation.ipynb
03/: 05_planar_manipulator.ipynb  07_rigid_transforms.ipynb  08_robot_painter.ipynb  09_intro_to_qp.ipynb  10_differential_ik_optimization.ipynb  14_pickplace_initials.ipynb  Init.ipynb  forward_kinematics.ipynb  grasp.ipynb  jacobian.ipynb  kinematic_tree.ipynb  pick.ipynb  pseudoinverse.ipynb  qdot_vs_v.ipynb  qp_diff_ik.ipynb
robotics_manipulation_russ.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
